--- a/single-product.html
+++ b/single-product.html
@@ -66,7 +66,7 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href="index.html">Home</a></li>
-              <li><a href="perfil.html">Perfil</a></li>
+              <li><a href="profile.html">Perfil</a></li>
               <li class="active">
                 <a href="single-product.html">Single product</a>
               </li>
