--- a/rentAcar.html
+++ b/rentAcar.html
@@ -50,7 +50,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Perfil</a></li>
+                        <li><a href="profile.html">Perfil</a></li>
                         <li class="active"><a href="single-product.html">Single product</a></li>
                     </ul>
                 </div>  
