--- a/profile.html
+++ b/profile.html
@@ -92,47 +92,61 @@
     <div class="perfil-area">
       <div class="container">
         <div class="col f-flex justify-content-center">
-          <img
-            src="img/perfil.png"
-            alt=""
-            style="width: 200px; height: 200px;"
-          />
-          <h1>Juan Perez</h1>
-          <div class="row">
-            <div class="col-md-3 col-sm-6">
-              <div class="single-shop-product">
-                <div class="product-upper" style="height: 200px;">
-                  <img src="img/aut2.jpeg" alt="" style="height: 200px;" />
-                </div>
-                <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-                <div class="product-carousel-price">
-                  <ins>$899.00</ins> <del>$999.00</del>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3 col-sm-6">
-              <div class="single-shop-product">
-                <div class="product-upper" style="height: 200px;">
-                  <img src="img/auto2.jpeg" alt="" style="height: 200px;" />
-                </div>
-                <h2><a href="">Apple new mac book 2015 March :P</a></h2>
-                <div class="product-carousel-price">
-                  <ins>$100.00</ins> <del></del>
+          <div style="text-align: center;">
+            <img
+              src="img/perfil.png"
+              alt=""
+              style="width: 200px; height: 200px;"
+            />
+            <h1>Juan Perez</h1>
+            <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <div class="single-shop-product">
+                  <div class="product-upper" style="height: 200px;">
+                    <img src="img/aut2.jpeg" alt="" style="height: 200px;" />
+                  </div>
+                  <h2><a href="">Apple new mac book 2015 March :P</a></h2>
+                  <div class="product-carousel-price">
+                    <ins>$899.00</ins> <del>$999.00</del>
+                  </div>
                 </div>
               </div>
-            </div>
+  
+              <div class="col-md-3 col-sm-6">
+                <div class="single-shop-product">
+                  <div class="product-upper" style="height: 200px;">
+                    <img src="img/auto2.jpeg" alt="" style="height: 200px;" />
+                  </div>
+                  <h2><a href="">Apple new mac book 2015 March :P</a></h2>
+                  <div class="product-carousel-price">
+                    <ins>$100.00</ins> <del></del>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-3 col-sm-6">
+                <div class="single-shop-product">
+                  <div class="product-upper" style="height: 200px;">
+                    <img src="img/auto3.jpeg" alt="" style="height: 200px;" />
+                  </div>
+                  <h2><a href="">Apple new mac book 2015 March :P</a></h2>
+                  <div class="product-carousel-price">
+                    <ins>$100.00</ins> <del></del>
+                  </div>
+                </div>
+              </div>
 
-            <div class="add_car_to_profile">
-              <a
-                class="add_to_cart_button"
-                data-quantity="1"
-                data-product_sku=""
-                data-product_id="70"
-                rel="nofollow"
-                href="addCar.html"
-                >+</a
-              >
+              <div class="add_car_to_profile" style="padding-top: 70px;">
+                <a
+                  class="add_to_cart_button"
+                  data-quantity="1"
+                  data-product_sku=""
+                  data-product_id="70"
+                  rel="nofollow"
+                  href="addCar.html"
+                  >+</a
+                >
+              </div>
             </div>
           </div>
         </div>
